# yadm-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  commands.rs  config.rs  diff.rs  encryption.rs  git.rs  hooks.rs  lib.rs  main.rs  readme.rs  types.rs  yadm.rs
src/components/: AlternatesView.tsx  BootstrapView.tsx  BranchesView.tsx  ConfigView.tsx  ConflictsView.tsx  DiffView.tsx  DiffViewer.tsx  EncryptionView.tsx  HooksView.tsx  LogView.tsx  ReadmeView.tsx  Sidebar.tsx  StashView.tsx  StatusView.tsx  Toast.tsx  Topbar.tsx
src/lib/: diff.ts  tauri.ts
src/styles/: globals.css
src/types/: yadm.ts
